# sudoku_solver

./: Cargo.toml
benches/: sudoku_solver_benches.rs
src/: lib.rs  sudoku_grid.rs  sudoku_solver.rs
sudokus/: diabolical.json  hard.json  medium.json  solved_diabolical.json  solved_hard.json  solved_medium.json
tests/: solver_test.rs
