[package]
name = "sudoku_solver"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
lazy_static = "1.4.0"

[dev-dependencies]
criterion = "*"
serde = { version = "1.0.192", features = ["serde_derive"] }
serde_json = "1.0.108"

[[bench]]
name = "sudoku_solver_benches"
harness = false